tests/bad/missing_line_end.ae
/// fail: Expected newline / semicolon

struct Foo {
    a: i32 b: i32
}